Estado enviado fuera del constructor